<resources>
    <string name="app_name">Jss Connect</string>

    <string name="splash_welcome_txt">Jss Colab \nConnecting Students</string>
    <string name="login_btn_label">Login</string>
    <string name="get_started_btn_label">Sign Up</string>
    <string name="signup_title">Sign up</string>
    <string name="password_hint">Password</string>
    <string name="signup_btn_label">Sign Up</string>
    <string name="have_account">Have an Account?<font color="#FF5722">Login</font></string>
    <string name="dont_have_account">Don\'t have an Account?<font color="#FF5722">SignUp</font></string>
    <string name="login_label">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="verify_your_n_phone_number">Verify your \nphone number</string>
    <string name="we_will_send_you_an_one_time_password_otp_on_your_whatsapp_to_verify_your_phone_number">We will send you an <b>One Time Password (OTP)</b> on your whatsapp to verify your phone number</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_mobile_no">Enter mobile no./email*</string>
    <string name="_92xxxxxxxx">92xxxxxxxx</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>