<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp">

        <ImageView
            android:id="@+id/splashBg"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/logo_without_bg"
            app:tint="@color/purple" />

        <TextView
            android:id="@+id/title"
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout"
            android:layout_below="@+id/splashBg"
            android:layout_alignParentStart="true"
            android:text="@string/splash_welcome_txt" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/StrokeButtonStyle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:minWidth="@dimen/splash_btn_width"
                android:text="@string/login_btn_label"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_get_started"
                style="@style/SolidButtonStyle"
                android:layout_alignParentEnd="true"
                android:minWidth="@dimen/splash_btn_width"
                android:onClick="getStarted"
                android:text="@string/get_started_btn_label"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
